--- a/src/learning/main-page.fxml
+++ b/src/learning/main-page.fxml
@@ -7,14 +7,13 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox xmlns="http://javafx.com/javafx/8.0.192" xmlns:fx="http://javafx.com/fxml/1"
-      prefHeight="400.0"
-      prefWidth="640.0"
-      fx:controller="learning.MainPage">
-    <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
-        <TextField fx:id="newTodo" onAction="#addTodo"/>
-        <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" text="Add" onAction="#addTodo"/>
+      prefHeight="600.0"
+      prefWidth="640.0">
+    <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="100.0">
+        <TextField fx:id="newTodo"/>
+        <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" text="Add"/>
     </HBox>
-    <HBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="200.0">
+    <HBox alignment="TOP_CENTER" prefHeight="500.0" prefWidth="100.0">
         <Label fx:id="todos"/>
     </HBox>
 </VBox>
